<resources>
    <string name="app_name">Prueba1</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="boton">Ingresar</string>
    <string name="mensaje">Ingresa tu usuario y contraseña</string>

    <string name="nombre">Nombre</string>
    <string name="telefono">telefono</string>
    <string name="btn2">Agregar</string>
    <string name="mensaje2">Haz presion larga para eliminar contacto</string>

    <string name="mensaje3">Selecciona la app</string>
    <string name="btn3">Agenda Telefonica</string>
    <string name="btn4">Lista Contactos</string>

    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="fecha">Fecha Nacimiento</string>

    <string name="actualizar">Actualizar</string>
</resources>